lang/tests/compile_fail/typo_field_ref.stderr
error: `mint = mnit` — no field `mnit` in this accounts struct
  --> tests/compile_fail/typo_field_ref.rs:12:28
   |
12 |     #[account(token(mint = mnit, authority = authority))]
   |                            ^^^^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/typo_field_ref.rs:3:5
  |
3 | use quasar_spl::{TokenProgram, *};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
